added my footer links to account and  website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   </head>
   <body>
     <h1>Welcome to my app</h1>
-    <footer>Coded by Nokhwezi Philander</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/nphilander" target="_blank"
+        >Nokhwezi Philander</a
+      >
+      , code hosted by
+      <a
+        href="https://github.com/nphilander/Weather-App--VanillaJS"
+        target="_blank"
+        >Github</a
+      >
+      and website hosted on
+      <a href="https://nokhwezi-weather-app.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
