added the html to the project

--- a/index.html
+++ b/index.html
@@ -3,16 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nokhwezi App</title>
+    <title>Nokhwezi's App</title>
   </head>
   <body>
-    <h1>Welcome to my app</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Cape Town</h1>
+        <p>
+          Friday 20:08, windy
+          <br />
+          Humidity: 30%, Wind: 4.3km/h
+        </p>
+      </div>
+      <div>🌤️ 15 °C</div>
+    </main>
+
     <footer>
       Coded by
       <a href="https://github.com/nphilander" target="_blank"
         >Nokhwezi Philander</a
       >
-      , code hosted by
+      , code hosted at
       <a
         href="https://github.com/nphilander/Weather-App--VanillaJS"
         target="_blank"
