--- a/index.html
+++ b/index.html
@@ -3,26 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Nokhwezi's App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city" required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Cape Town</h1>
-        <p>
-          Friday 20:08, windy
-          <br />
-          Humidity: 30%, Wind: 4.3km/h
-        </p>
-      </div>
-      <div>🌤️ 15 °C</div>
-    </main>
+    <div class="container">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city" required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Cape Town</h1>
+          <p>
+            Friday 20:08, windy
+            <br />
+            Humidity: 30%, Wind: 4.3km/h
+          </p>
+        </div>
+        <div>🌤️ 15 °C</div>
+      </main>
+    </div>
 
     <footer>
       Coded by
