--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <div class="container">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city" required />
-          <input type="submit" value="Search" />
+        <form class="search-form">
+          <input type="search" placeholder="Enter a city" required class="search-form-input"/>
+          <input type="submit" value="Search" class="search-form-submit"/>
         </form>
       </header>
       <main>
