adding size styling to main h1 element

--- a/index.html
+++ b/index.html
@@ -16,20 +16,27 @@
     <div class="container">
       <header>
         <form class="search-form">
-          <input type="search" placeholder="Enter a city" required class="search-form-input"/>
-          <input type="submit" value="Search" class="search-form-submit"/>
+          <input
+            type="search"
+            placeholder="Enter a city"
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-submit" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Cape Town</h1>
-          <p>
-            Friday 20:08, windy
-            <br />
-            Humidity: 30%, Wind: 4.3km/h
-          </p>
+        <div class="main-weather-data">
+          <div>
+            <h1 class="weather-city">Cape Town</h1>
+            <p>
+              Friday 20:08, windy
+              <br />
+              Humidity: 30%, Wind: 4.3km/h
+            </p>
+          </div>
+          <div>🌤️ 15 °C</div>
         </div>
-        <div>🌤️ 15 °C</div>
       </main>
     </div>
 
