added class elements and styling to the main weather details

--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
         <div class="main-weather-data">
           <div>
             <h1 class="weather-city">Cape Town</h1>
-            <p>
+            <p class="weather-details">
               Friday 20:08, windy
               <br />
-              Humidity: 30%, Wind: 4.3km/h
+              Humidity: <strong>30%</strong>, Wind: <strong>4.3km/h</strong>
             </p>
           </div>
-          <div>🌤️ 15 °C</div>
+          <div class="weather-temp-container">
+            <div class="weather-icon">🌤️</div>
+            <div class="weather-temp">15</div>
+            <div class="weather-temp-unit">°C</div>
+          </div>
         </div>
       </main>
     </div>
