--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <body>
     <div class="container">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city"
             required
             class="search-form-input"
+            id="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-submit" />
         </form>
@@ -28,7 +29,7 @@
       <main>
         <div class="main-weather-data">
           <div>
-            <h1 class="weather-city">Cape Town</h1>
+            <h1 class="weather-city" id="city">Cape Town</h1>
             <p class="weather-details">
               Friday 20:08, windy
               <br />
@@ -60,5 +61,6 @@
         >Netlify</a
       >
     </footer>
+    <script src="src/script.js"></script>
   </body>
 </html>
