created functions to handle searching the city with the api and getting the temp with the city value

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="weather-temp-container">
             <div class="weather-icon">🌤️</div>
-            <div class="weather-temp">15</div>
+            <div class="weather-temp" id="temp">15</div>
             <div class="weather-temp-unit">°C</div>
           </div>
         </div>
