--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <div class="main-weather-data">
           <div>
-            <h1 class="weather-city" id="city">Cape Town</h1>
+            <h1 class="weather-city" id="city"></h1>
             <p class="weather-details">
               Friday 20:08, windy
               <br />
@@ -39,7 +39,7 @@
           </div>
           <div class="weather-temp-container">
             <div class="weather-icon">🌤️</div>
-            <div class="weather-temp" id="temp">15</div>
+            <div class="weather-temp" id="temp"></div>
             <div class="weather-temp-unit">°C</div>
           </div>
         </div>
