injected more weather data

--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
           <div>
             <h1 class="weather-city" id="city"></h1>
             <p class="weather-details">
-              Friday 20:08, windy
+              <span id="time"></span>,
+              <span id="description"></span>
               <br />
-              Humidity: <strong>30%</strong>, Wind: <strong>4.3km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-temp-container">
-            <div class="weather-icon">🌤️</div>
+            <div id="icon"></div>
             <div class="weather-temp" id="temp"></div>
             <div class="weather-temp-unit">°C</div>
           </div>
