--- a/index.html
+++ b/index.html
@@ -45,6 +45,85 @@
             <div class="weather-temp-unit">°C</div>
           </div>
         </div>
+
+        <div class="forecast">
+          <div class="forecast-day">
+            <div class="forecast-date">TUE</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temperatures">
+              <div class="forecast-temperature">
+                <strong>15º</strong>
+              </div>
+              <div class="forecast-temperature">9º</div>
+            </div>
+          </div>
+
+          <div class="forecast-day">
+            <div class="forecast-date">Wed</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temperatures">
+              <div class="forecast-temperature">
+                <strong>15º</strong>
+              </div>
+              <div class="forecast-temperature">9º</div>
+            </div>
+          </div>
+
+          <div class="forecast-day">
+            <div class="forecast-date">Wed</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temperatures">
+              <div class="forecast-temperature">
+                <strong>15º</strong>
+              </div>
+              <div class="forecast-temperature">9º</div>
+            </div>
+          </div>
+
+          <div class="forecast-day">
+            <div class="forecast-date">Wed</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temperatures">
+              <div class="forecast-temperature">
+                <strong>15º</strong>
+              </div>
+              <div class="forecast-temperature">9º</div>
+            </div>
+          </div>
+
+          <div class="forecast-day">
+            <div class="forecast-date">Wed</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temperatures">
+              <div class="forecast-temperature">
+                <strong>15º</strong>
+              </div>
+              <div class="forecast-temperature">9º</div>
+            </div>
+          </div>
+
+          <div class="forecast-day">
+            <div class="forecast-date">Wed</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temperatures">
+              <div class="forecast-temperature">
+                <strong>15º</strong>
+              </div>
+              <div class="forecast-temperature">9º</div>
+            </div>
+          </div>
+
+          <div class="forecast-day">
+            <div class="forecast-date">Wed</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temperatures">
+              <div class="forecast-temperature">
+                <strong>15º</strong>
+              </div>
+              <div class="forecast-temperature">9º</div>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
 
